# controllers/sessionController.go
@@ -12,6 +12,20 @@ type SessionController struct {
 	service *services.SessionService
 }
 
+// @BasePath /session
+
+// get users in a session
+// @Summary Get users in a session
+// @Schemes
+// @Description Api to get users in a session
+// @Tags Sessions
+// @Accept json
+// @Produce json
+// @Param Transactionid header string true "Transactionid"
+// @Param sessionId path string true "session Id"
+// @Param expanded query string Array "expanded: ture: for list of users +detail || mapped for list of users +detail mapped by their state , anything else for just participant id list"
+// @Success 200 {object} []models.RedisUserEntry{}
+// @Router /api/v1/session/{sessionId} [get]
 func (s *SessionController) getUsersInSession(ctx *fiber.Ctx) error {
 	expanded := ctx.Query("expanded")
 	tid := ctx.GetReqHeaders()["Transactionid"]
@@ -48,7 +62,7 @@ func (s *SessionController) getUsersInSession(ctx *fiber.Ctx) error {
 }
 
 func (s *SessionController) SetupRoutes(rg *fiber.Router) {
-	(*rg).Get("/session/:session", s.getUsersInSession)
+	(*rg).Get("/:session", s.getUsersInSession)
 
 }
 func SessionControllerProvider(log *zap.SugaredLogger, s *services.SessionService) *SessionController {
